fix icon overlapping menu

--- a/packages/webapp/src/components/Navigation/NavBar/styles.scss
+++ b/packages/webapp/src/components/Navigation/NavBar/styles.scss
@@ -61,12 +61,10 @@
   height: 25px;
   margin-right: 16px;
   border: none;
-  z-index: 1000000;
   padding-right: 0;
 }
 
 .profilePicture {
-  z-index: 1000000;
   width: 28px;
   height: 28px;
   margin-right: 16px;
